# rust-fluid-sim

./: .gitignore  Cargo.toml
backend-actix/: Cargo.toml
backend-actix/src/: gravity.rs  main.rs
backend-rocket/: Cargo.toml
frontend/src/static/: index.html
gravity-sim/: Cargo.toml
gravity-sim/src/: geom.rs  lib.rs
