[package]
name = "backend-actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
fluid-sim = { path = "../fluid-sim" }
gravity-sim = { path = "../gravity-sim" }
